commit: country images not showing in build fix

--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,11 @@
     background-color: rgb(160, 24, 24);
   } */
 
+  .nw-img {
+    width: 36px;
+    height: 22px;
+  }
+
   .nw-margin {
     margin-top: 28px;
   }
